# VisionOS-Gesture-Control

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
assets/: .gitkeep
config/profiles/: designer.json  gamer.json  general.json
datasets/: .gitkeep
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DATAFLOW.md
screenshots/: .gitkeep
src/visionos/: __init__.py  __main__.py  app.py  cli.py
src/visionos/config/: __init__.py  settings.py
src/visionos/controllers/: __init__.py  base.py  brightness_controller.py  dispatcher.py  media_controller.py  mouse_controller.py  screenshot_controller.py  volume_controller.py
src/visionos/core/: __init__.py  hand_tracker.py  landmark.py  smoothing.py
src/visionos/data/: __init__.py  collector.py
src/visionos/gestures/: __init__.py  classifier.py  gesture_types.py  rules.py
src/visionos/gestures/ml/: __init__.py  model.py
src/visionos/integrations/: __init__.py  eye_tracking.py  ros2_bridge.py  voice_control.py
src/visionos/ui/: __init__.py  dashboard.py  settings_window.py  themes.py
src/visionos/utils/: __init__.py  exceptions.py  logger.py  metrics.py
tests/: __init__.py  conftest.py  helpers.py  test_classifier.py  test_config.py  test_metrics.py  test_smoothing.py
